--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "prettier": "^3.6.2"
   },
   "dependencies": {
+    "cookies-parser": "^1.2.0",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
     "mongoose": "^8.19.3"
