all setup complete

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "dependencies": {
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.8.0",
-    "cookies-parser": "^1.2.0",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
